# AgoraExtension

./: CMakeLists.txt  Dockerfile
common/: helper.cpp  helper.h  sample_common.cpp  sample_common.h  sample_connection_observer.cpp  sample_connection_observer.h  sample_local_user_observer.cpp  sample_local_user_observer.h
common/file_parser/: helper_h264_parser.cpp  helper_h265_parser.cpp  helper_h265_parser.h
src/: AgoraChannelSender.cpp  AgoraChannelSender.h  AgoraExtension.cpp  PcmFrameObserver.cpp  PcmFrameObserver.h  main.cpp
